Add Aave balances and improve integration installer
